password generator almost finished

--- a/passvault-client/build.gradle
+++ b/passvault-client/build.gradle
@@ -1,11 +1,18 @@
-
+plugins {
+	id 'io.github.file5.guidesigner' version '1.0.2'
+}
 
 dependencies {
 	implementation(project(':passvault-core'))
 	
-	//flatlaf look and feel
+	//ui stuff
+	implementation "com.jetbrains.intellij.java:java-gui-forms-rt:+"
+	implementation "com.jgoodies:forms:1.1-preview"
+	
 	implementation 'com.formdev:flatlaf:3.5.1'
 	implementation 'com.formdev:flatlaf-intellij-themes:3.5.1'
+	
+	//gson for json configurations
 	
 }
 
