--- a/passvault-client/build.gradle
+++ b/passvault-client/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 	implementation "com.jgoodies:jgoodies-forms:1.9.0"
 	
 	implementation 'com.formdev:flatlaf:3.5.1'
+	implementation 'com.formdev:flatlaf-extras:3.5.1'
 	implementation 'com.formdev:flatlaf-intellij-themes:3.5.1'
 	
 	//gson for json configurations
