--- a/passvault-core/build.gradle
+++ b/passvault-core/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
 	
-	//json for entry serialization
+	//gson for entry serialization
 	implementation 'com.google.code.gson:gson:2.11.0'
 	
 }
