--- a/passvault-core/build.gradle
+++ b/passvault-core/build.gradle
@@ -4,4 +4,7 @@ dependencies {
 	//gson for entry serialization
 	implementation 'com.google.code.gson:gson:2.11.0'
 	
+	//totp generation
+	implementation 'dev.samstevens.totp:totp:1.7.1'
+	
 }
