add settings saving/loading

--- a/passvault-client/build.gradle
+++ b/passvault-client/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 dependencies {
 	implementation(project(':passvault-core'))
+	implementation 'com.google.code.gson:gson:2.11.0'
 	
 	//ui stuff
 	implementation "com.jetbrains.intellij.java:java-gui-forms-rt:+"
